spec/neg/use-schema-mixedcase.wv
-- Test that mixed case keywords are rejected

-- This should fail with a syntax error
use Schema analytics